--- a/10/8-3/index.html
+++ b/10/8-3/index.html
@@ -22,12 +22,32 @@
             </ul>
         </div>
         <div class="info">
-            <h2>Time of new life</h2>
+            <div>
+                <h2>Time of new life</h2>
             <p>新时代，年轻的人们让我们一起
                 <br>体验新生活，享受新生活</p>
             <p class="go">开始体验</p>
+            </div>
         </div>
-        <div class="slogan"></div>
+
+        <div class="slogan clearfix">
+            <div class="sblock">
+                <img src="img/slogan1.png" alt="">
+                <p>打造全新世界观，让你更爱你的生活</p>
+            </div>
+            <div class="sblock">
+                <img src="img/slogan2.png" alt="">
+                <p>打造全新世界观，让你更爱你的生活</p>
+            </div>
+            <div class="sblock">
+                <img src="img/slogan3.png" alt="">
+                <p>打造全新世界观，让你更爱你的生活</p>
+            </div>
+            <div class="sblock">
+                <img src="img/slogan4.png" alt="">
+                <p>打造全新世界观，让你更爱你的生活</p>
+            </div>
+        </div>
     </div>
 </body>
 
