--- a/期末/index.html
+++ b/期末/index.html
@@ -14,9 +14,9 @@ img{-webkit-transition:all 0.7s ease-out;-moz-transition:all 0.7s ease-out;-o-tr
 .box{text-align:left;color:#808080;font-size:1.2em;line-height:1.6em}
 #section0{padding:60px 0}
 #section0 img{height:100%;margin:40px 0 0 0}
-#section1 img{position:absolute;left:40px;top:100px}
-#section1 .box{position:absolute;top:50%;left:50%;margin-top:-192px;margin-left:89px;width:395px;z-index:1}
-#section1 .imgsContainer{display:block;position:absolute;z-index:1;top:42%;left:72%;margin-top:-325px;margin-left:-747px;width:800px;height:696px}
+#section1 img{position:absolute;left:40px;top:100px;}
+#section1 .box{position:absolute;top:50%;left:50%;margin-top:-192px;margin-left:89px;width:395px;z-index:1;}
+#section1 .imgsContainer{display:block;position:absolute;z-index:1;top:42%;left:72%;margin-top:-325px;margin-left:-747px;width:800px;height:696px;}
 #section1 img{height:100%}
 @media all and (min-width:620px) and (max-width:800px){#section1 .imgsContainer{margin-top:-278px;margin-left:-685px;width:647px;height:563px}
 }@media all and (max-width:620px){#section1 .imgsContainer{margin-top:-208px;margin-left:-516px;width:534px;height:464px}
@@ -114,7 +114,7 @@ img{-webkit-transition:all 0.7s ease-out;-moz-transition:all 0.7s ease-out;-o-tr
 <div class="section" id="section1">
 	<div class="wrap">
 		<div class="imgsContainer">
-			<img src="images/iphone22.jpg" alt="iphone" id="iphone2" />
+			<img src="images/iphone22.png" alt="iphone" id="iphone2" />
 			
 		</div>
 		
